修改个人中心等
更改个人中心nav以及新建control，添加TODO，更换jQuery文件

--- a/themes/simplebootx/Public/usernav.html
+++ b/themes/simplebootx/Public/usernav.html
@@ -3,6 +3,8 @@
 	<a class="list-group-item" href="{:U('user/profile/password')}"><i class="fa fa-lock fa-fw"></i> 修改密码</a>
 	<a class="list-group-item" href="{:U('user/profile/avatar')}"><i class="fa fa-user fa-fw"></i> 编辑头像</a>
 	<a class="list-group-item" href="{:U('user/profile/bang')}"><i class="fa fa-exchange fa-fw"></i> 绑定账号</a>
+	<a class="list-group-item" href="{:U('user/profile/upload_article')}"><i class="fa fa-pencil fa-fw"></i> 上传科研信息</a>
+	<a class="list-group-item" href="{:U('user/profile/manage')}"><i class="fa fa-desktop fa-fw"></i> 科研信息管理</a>
 	<a class="list-group-item" href="{:U('user/favorite/index')}"><i class="fa fa-star-o fa-fw"></i> 我的收藏</a>
 	<a class="list-group-item" href="{:U('comment/comment/index')}"><i class="fa fa-comments-o fa-fw"></i> 我的评论</a>
 </div>
