上传所有的样式写完，format了部分文件- -手误
开始写管理的样式

--- a/themes/simplebootx/User/Profile/upload_article.html
+++ b/themes/simplebootx/User/Profile/upload_article.html
@@ -30,9 +30,9 @@
 
                             <table class="table table-bordered">
                                 <tr>
-                                    <th  width="80">论文/著作</th>
+                                    <th width="80">论文/著作</th>
                                     <td>
-                                        <input type="text"  name="post[post_title]" id="title"
+                                        <input type="text" name="post[post_title]" id="title"
                                                value="" placeholder="请输入论文/著作标题"/>
                                         <span class="form-required">*</span>
                                     </td>
@@ -40,7 +40,7 @@
                                 <tr>
                                     <th width="80">期刊/出版社</th>
                                     <td>
-                                        <input type="text"  name="post[post_title]" id="title"
+                                        <input type="text" name="post[post_title]" id="title"
                                                value="" placeholder="请输入期刊/出版社"/>
                                         <span class="form-required">*</span>
                                     </td>
@@ -48,14 +48,16 @@
                                 <tr>
                                     <th width="80">出版年月</th>
                                     <td>
-                                   			<input class="js-date" type="text" id="input-publicdate" placeholder="2016-01-01" name="publicdate" value="{$publicdate}" style="width:90px">
+                                        <input class="js-date" type="text" id="input-publicdate"
+                                               placeholder="2016-01-01" name="publicdate" value="{$publicdate}"
+                                               style="width:90px">
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">卷号页码等信息</th>
                                     <td>
-                                        <input type="text"  name="post[post_title]" id="title"
+                                        <input type="text" name="post[post_title]" id="title"
                                                value="" placeholder="请输入卷号页码等信息"/>
                                         <span class="form-required">*</span>
                                     </td>
@@ -63,7 +65,7 @@
                                 <tr>
                                     <th width="80">作者列表</th>
                                     <td>
-                                        <input type="text"  name="post[post_title]" id="title"
+                                        <input type="text" name="post[post_title]" id="title"
                                                value="" placeholder="请输入作者列表"/>
                                         <span class="form-required">*</span>
                                     </td>
@@ -71,7 +73,7 @@
                                 <tr>
                                     <th width="80">本人贡献度</th>
                                     <td>
-                                        <input type="number" value="" min="1" max="100" style="width: 50px">%  &nbsp;
+                                        <input type="number" value="" min="1" max="100" style="width: 50px">% &nbsp;
 
                                         <span class="form-required">*</span>
                                     </td>
@@ -80,13 +82,13 @@
                                     <th width="80">期刊级别（1-6类）</th>
                                     <td>
                                         <select class="form-control" style="width:90px;">
-                                        	<option>请选择</option>
-	                                        <option>1类</option>
-	                                        <option>2类</option>
-	                                        <option>3类</option>
-	                                        <option>4类</option>
-	                                        <option>5类</option>
-	                                        <option>6类</option>
+                                            <option>请选择</option>
+                                            <option>1类</option>
+                                            <option>2类</option>
+                                            <option>3类</option>
+                                            <option>4类</option>
+                                            <option>5类</option>
+                                            <option>6类</option>
                                         </select>
                                         <span class="form-required">*</span>
                                     </td>
@@ -98,13 +100,13 @@
                                     </td>
                                 </tr>
                             </table>
-                                <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
+                            <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-		
+
     <tc_include file="Public:footer"/>
 
 </div>
