--- a/themes/simplebootx/Public/footer.html
+++ b/themes/simplebootx/Public/footer.html
@@ -12,14 +12,8 @@
 		</foreach>
 	</div>
 	<p>
-		Made by <a href="http://www.thinkcmf.com" target="_blank">ThinkCMF</a>
-		Code licensed under the 
-		<a href="http://www.apache.org/licenses/LICENSE-2.0" rel="nofollow" target="_blank">Apache License v2.0</a>.
+		<a href="http://www.njuptsast.org" target="_blank">©南京邮电大学校科协</a>
 		<br />
-		Based on 
-		<a href="http://getbootstrap.com/2.3.2/" target="_blank">Bootstrap</a>.
-		Icons from 
-		<a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a>
 	</p>
 </div>
 <div id="backtotop">
