--- a/themes/simplebootx/Public/nav.html
+++ b/themes/simplebootx/Public/nav.html
@@ -33,16 +33,9 @@
 	            </ul>
           	</li>
           	<li class="dropdown user offline">
-	            <a class="dropdown-toggle user" data-toggle="dropdown" href="#">
-	           		<img src="__TMPL__/Public/images/headicon.png" class="headicon"/>登录<b class="caret"></b>
+	            <a class="dropdown-toggle user"  href="{:leuu('user/login/index')}">
+	           		<img src="__TMPL__/Public/images/headicon.png" class="headicon"/>登录
 	            </a>
-	            <ul class="dropdown-menu pull-right">
-	               <li><a href="{:U('api/oauth/login',array('type'=>'sina'))}"><i class="fa fa-weibo"></i> &nbsp;微博登录</a></li>
-	               <li><a href="{:U('api/oauth/login',array('type'=>'qq'))}"><i class="fa fa-qq"></i> &nbsp;QQ登录</a></li>
-	               <li><a href="{:leuu('user/login/index')}"><i class="fa fa-sign-in"></i> &nbsp;登录</a></li>
-	               <li class="divider"></li>
-	               <li><a href="{:leuu('user/register/index')}"><i class="fa fa-user"></i> &nbsp;注册</a></li>
-	            </ul>
           	</li>
 		</ul>
 		<div class="pull-right">
