--- a/themes/simplebootx/User/Profile/upload_patent.html
+++ b/themes/simplebootx/User/Profile/upload_patent.html
@@ -23,21 +23,51 @@
                                    <li ><a href="{:U('user/profile/upload_awards')}" ><i class="fa fa-pencil"></i> 上传获奖</a></li>
                                    <li class="active"><a  data-toggle="tab"><i class="fa fa-pencil"></i> 上传专利</a></li>
                                </ul>
-                               <div class="tab-content">
-                                   <div class="tab-pane active" id="one">
-	                                   <if condition="!empty($oauths['qq'])">
-	                                   		<button class="btn"><i class="fa fa-qq"></i> 已绑定腾讯QQ账号</button>
-	                                   <else/>
-	                                   		<a class="btn btn-primary" href="{:U('api/oauth/bang',array('type'=>'qq'))}"><i class="fa fa-qq"></i> 绑定腾讯QQ账号</a>
-	                                   </if>
-	                                   <if condition="!empty($oauths['sina'])">
-	                                   		<button class="btn"><i class="fa fa-weibo"></i> 已绑定新浪微博账号</button>
-	                                   <else/>
-	                                   		<a class="btn btn-primary" href="{:U('api/oauth/bang',array('type'=>'sina'))}"><i class="fa fa-weibo"></i> 绑定新浪微博账号</a>
-	                                   </if>
-                                   </div>
-                               </div>							
-                           </div>
+                <div class="tab-content">
+                    <form action="{:U('AdminPage/add_post')}" method="post" class="form-horizontal js-ajax-forms"
+                          enctype="multipart/form-data">
+                        <input type="hidden" name="post[post_type]" value="2">
+                        <div class="row-fluid">
+                            <table class="table table-bordered">
+                                <tr>
+                                    <th width="80">专利名称</th>
+                                    <td>
+                                        <input type="text" name="post[post_title]" id="title"
+                                               value="" placeholder="请输入专利名称"/>
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">发明人</th>
+                                    <td>
+                                        <input type="text" name="post[post_title]" id="title"
+                                               value="" placeholder="请输入发明人"/>
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">专利类型</th>
+                                    <td>
+                                        <select class="form-control" style="width:90px;">
+                                            <option>请选择</option>
+                                            <option>发明</option>
+                                            <option>实用新型</option>
+                                            <option>外观设计</option>
+                                            <option>其它</option>
+                                        </select>
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">证明材料</th>
+                                    <td>
+                                        <script type="text/plain" id="content" name="post[post_content]"></script>
+                                    </td>
+                                </tr>
+                            </table>
+                            <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
+                    </form>
+                </div>
                     </div>
                 </div>
 
