--- a/themes/simplebootx/User/Profile/manage_patent.html
+++ b/themes/simplebootx/User/Profile/manage_patent.html
@@ -24,54 +24,48 @@
                     <li class="active"><a href="#"><i class="fa fa-desktop"></i> 专利管理</a></li>
                 </ul>
                 <div class="tab-content">
-                                   <div class="tab-pane active" id="one">
-                                        <form class="form-horizontal js-ajax-form" action="{:U('profile/edit_post')}" method="post">
-                                            <div class="control-group">
-                                                <label class="control-label" for="input-user_nicename">姓名</label>
-                                                <div class="controls">
-                                                    <input type="text" id="input-user_nicename" placeholder="姓名" name="user_nicename" value="{$user_nicename}">
-                                                </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <label class="control-label" for="input-sex">性别</label>
-                                                <div class="controls">
-                                                    <php>
-                                                    $sexs=array("1"=>"男","2"=>"女");
-                                                    </php>
-                                                    <select id="input-sex" name="sex">
-                                                        <foreach name="sexs" item="vo">
-                                                        <php>$sexselected=$key==$sex?"selected":"";</php>
-                                                            <option value="{$key}" {$sexselected}>{$vo}</option>
-                                                        </foreach>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <label class="control-label" for="input-birthday">生日</label>
-                                                <div class="controls">
-                                                    <input class="js-date" type="text" id="input-birthday" placeholder="2013-01-04" name="birthday" value="{$birthday}">
-                                                </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <label class="control-label" for="input-user_url">个人网址</label>
-                                                <div class="controls">
-                                                    <input type="text" id="input-user_url" placeholder="http://example.com" name="user_url" value="{$user_url}">
-                                                </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <label class="control-label" for="input-signature">个性签名</label>
-                                                <div class="controls">
-                                                    <textarea id="input-signature" placeholder="个性签名" name="signature">{$signature}</textarea>
-                                                </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <div class="controls">
-                                                    <button type="submit" class="btn js-ajax-submit">保存</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                   </div>
-                               </div>
+                    <div class="tab-pane active" id="one">
+                        <table class="table table-bordered table-striped table-hover">
+                            <thead>
+                            <tr>
+                                <th style="display: none;">#</th>
+                                <th>专利名称</th>
+                                <th>发明人</th>
+                                <th>专利类型</th>
+                                <th>点击次数</th>
+                                <th>状态</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td style="display: none;">{$vo.id}</td>
+                                <td><a href="{$vo.url}">存在的价值——读波伏瓦《人都是要死的》</a></td>
+                                <td>某某某</td>
+                                <td>实用发明</td>
+                                <td>1230</td>
+                                <td>未审核</td>
+                                <td><a href="{:U('user/profile/edit_article')}">编辑</a> | <a class="js-ajax-dialog-btn"
+                                                                                            href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}"
+                                                                                            data-msg="您确定要删除吗？"
+                                                                                            data-ok="" data-cacel="取消">删除</a>
+                                </td>
+                            </tr>
+                            <foreach name="favorites" item="vo">
+                                <tr>
+                                    <td>{$vo.id}</td>
+                                    <td>{$vo.title}</td>
+                                    <td>{$vo.description}</td>
+                                    <td><a href="{$vo.url}">查看</a> | <a class="js-ajax-dialog-btn"
+                                                                        href="{:U('user/favorite/delete_favorite',array('id'=>$vo['id']))}"
+                                                                        data-msg="您确定要取消收藏吗？" data-ok=""
+                                                                        data-cacel="取消">取消收藏</a></td>
+                                </tr>
+                            </foreach>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
