--- a/themes/simplebootx/User/Profile/upload_paper.html
+++ b/themes/simplebootx/User/Profile/upload_paper.html
@@ -9,7 +9,6 @@
 </head>
 <body class="body-white" id="top">
 <tc_include file="Public:nav"/>
-
 <div class="container tc-main">
     <div class="row">
         <div class="span3">
@@ -18,9 +17,9 @@
         <div class="span9">
             <div class="tabs">
                 <ul class="nav nav-tabs">
-                    <li><a href="{:U('user/profile/upload_article')}"><i class="fa fa-pencil"></i> 上传论文</a></li>
+                    <li class="active"><a href="#one" data-toggle="tab"><i class="fa fa-pencil"></i> 上传论文</a></li>
                     <li><a href="{:U('user/profile/upload_project')}"><i class="fa fa-pencil"></i> 上传项目</a></li>
-                    <li class="active"><a><i class="fa fa-pencil"></i> 上传获奖</a></li>
+                    <li><a href="{:U('user/profile/upload_award')}"><i class="fa fa-pencil"></i> 上传获奖</a></li>
                     <li><a href="{:U('user/profile/upload_patent')}"><i class="fa fa-pencil"></i> 上传专利</a></li>
                 </ul>
                 <div class="tab-content">
@@ -28,42 +27,69 @@
                           enctype="multipart/form-data">
                         <input type="hidden" name="post[post_type]" value="2">
                         <div class="row-fluid">
+
                             <table class="table table-bordered">
                                 <tr>
-                                    <th width="80">获奖名称</th>
+                                    <th width="80">论文/著作</th>
                                     <td>
                                         <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入获奖名称"/>
+                                               value="" placeholder="请输入论文/著作标题"/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th width="80">获奖人列表</th>
+                                    <th width="80">期刊/出版社</th>
                                     <td>
                                         <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入获奖人列表"/>
+                                               value="" placeholder="请输入期刊/出版社"/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th width="80">获奖级别</th>
+                                    <th width="80">出版年月</th>
+                                    <td>
+                                        <input class="js-date" type="text" id="input-publicdate"
+                                               placeholder="2016-01-01" name="publicdate" value="{$publicdate}"
+                                               style="width:90px">
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">卷号页码等信息</th>
+                                    <td>
+                                        <input type="text" name="post[post_title]" id="title"
+                                               value="" placeholder="请输入卷号页码等信息"/>
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">作者列表</th>
+                                    <td>
+                                        <input type="text" name="post[post_title]" id="title"
+                                               value="" placeholder="请输入作者列表"/>
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">本人贡献度</th>
+                                    <td>
+                                        <input type="number" value="" min="1" max="100" style="width: 50px">% &nbsp;
+
+                                        <span class="form-required">*</span>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="80">期刊级别（1-6类）</th>
                                     <td>
                                         <select class="form-control" style="width:90px;">
                                             <option>请选择</option>
-                                            <option>国家级</option>
-                                            <option>省部级</option>
-                                            <option>市厅级</option>
-                                            <option>校级</option>
-                                            <option>其它</option>
+                                            <option>1类</option>
+                                            <option>2类</option>
+                                            <option>3类</option>
+                                            <option>4类</option>
+                                            <option>5类</option>
+                                            <option>6类</option>
                                         </select>
-                                        <span class="form-required">*</span>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th width="80">授予方名称</th>
-                                    <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入授予方名称"/>
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
