--- a/themes/simplebootx/User/Profile/upload_patent.html
+++ b/themes/simplebootx/User/Profile/upload_patent.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{$site_name}</title>
-<meta name="keywords" content="{$site_seo_keywords}" />
-<meta name="description" content="{$site_seo_description}">
-<meta name="author" content="ThinkCMF">
-<tc_include file="Public:head" />
+    <title>{$site_name}</title>
+    <meta name="keywords" content="{$site_seo_keywords}" />
+    <meta name="description" content="{$site_seo_description}">
+    <meta name="author" content="ThinkCMF">
+    <tc_include file="Public:head" />
 </head>
 <body class="body-white" id="top">
-	<tc_include file="Public:nav" />
+<tc_include file="Public:nav" />
 
-		<div class="container tc-main">
-                <div class="row">
-                    <div class="span3">
-	                    <tc_include file="Public:usernav"/>
-                    </div>
-                    <div class="span9">
-                           <div class="tabs">
-                               <ul class="nav nav-tabs">
-                                   <li ><a href="{:U('user/profile/upload_paper')}" ><i class="fa fa-pencil"></i> 上传论文</a></li>
-                                   <li ><a href="{:U('user/profile/upload_project')}" ><i class="fa fa-pencil"></i> 上传项目</a></li>
-                                   <li ><a href="{:U('user/profile/upload_award')}" ><i class="fa fa-pencil"></i> 上传获奖</a></li>
-                                   <li class="active"><a  data-toggle="tab"><i class="fa fa-pencil"></i> 上传专利</a></li>
-                               </ul>
+<div class="container tc-main">
+    <div class="row">
+        <div class="span3">
+            <tc_include file="Public:usernav" />
+        </div>
+        <div class="span9">
+            <div class="tabs">
+                <ul class="nav nav-tabs">
+                    <li><a href="{:U('user/profile/upload_paper')}"><i class="fa fa-pencil"></i> 上传论文</a></li>
+                    <li><a href="{:U('user/profile/upload_project')}"><i class="fa fa-pencil"></i> 上传项目</a></li>
+                    <li><a href="{:U('user/profile/upload_award')}"><i class="fa fa-pencil"></i> 上传获奖</a></li>
+                    <li class="active"><a data-toggle="tab"><i class="fa fa-pencil"></i> 上传专利</a></li>
+                </ul>
                 <div class="tab-content">
-                    <form action="{:U('AdminPage/add_post')}" method="post" class="form-horizontal js-ajax-forms"
+                    <form action="{:U('User/Profile/article_post')}" method="post" class="form-horizontal js-ajax-forms"
                           enctype="multipart/form-data">
-                        <input type="hidden" name="post[post_type]" value="2">
+                        <input type="hidden" name="post[post_type]" value="patent">
                         <div class="row-fluid">
                             <table class="table table-bordered">
                                 <tr>
                                     <th width="80">专利名称</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入专利名称"/>
+                                        <input type="text" name="post[title]" id="title"
+                                               value="" placeholder="请输入专利名称" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">发明人</th>
                                     <td>
-                                        <input type="text" name="post[post_title]" id="title"
-                                               value="" placeholder="请输入发明人"/>
+                                        <input type="text" name="post[inventer]" id="title"
+                                               value="" placeholder="请输入发明人" />
                                         <span class="form-required">*</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th width="80">专利类型</th>
                                     <td>
-                                        <select class="form-control" style="width:90px;">
-                                            <option>请选择</option>
-                                            <option>发明</option>
-                                            <option>实用新型</option>
-                                            <option>外观设计</option>
-                                            <option>其它</option>
+                                        <select class="form-control" name="post[type]" required style="width:90px;">
+                                            <option value="" disabled selected>请选择</option>
+                                            <option value="1">发明</option>
+                                            <option value="2">实用新型</option>
+                                            <option value="3">外观设计</option>
+                                            <option value="4">其它</option>
                                         </select>
                                         <span class="form-required">*</span>
                                     </td>
@@ -61,21 +61,22 @@
                                 <tr>
                                     <th width="80">证明材料</th>
                                     <td>
-                                        <script type="text/plain" id="content" name="post[post_content]"></script>
+                                        <script type="text/plain" id="content" name="post[provement]"></script>
                                     </td>
                                 </tr>
                             </table>
                             <button class="btn btn-primary js-ajax-submit" type="submit">上传</button>
+                        </div>
                     </form>
                 </div>
-                    </div>
-                </div>
+            </div>
+        </div>
 
-		<tc_include file="Public:footer" />
+        <tc_include file="Public:footer" />
 
-	</div>
-	<!-- /container -->
+    </div>
+    <!-- /container -->
 
-	<tc_include file="Public:scripts" />
+    <tc_include file="Public:scripts" />
 </body>
 </html>
